# omniflow-ai

./: .dockerignore  .env  .env.docker  .env.example  .env.production.example  .env.schema.json  .env.staging.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pytest.ini
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.audit.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase0_init.py  0002_phase1_core_foundations.py  0003_phase3_growth_loop_core.py  0004_phase2_connector_framework.py  0005_phase4_inbox_lead_engine.py  0006_phase5_presence_seo_reputation.py  0007_phase6_attrib_analytics.py  (+9 more)
apps/api/app/: db.py  main.py  models.py  redis_client.py  schemas.py  seed.py  settings.py  tenancy.py
apps/api/omniflow_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_health.py  test_integration_services.py  test_phase10_integration.py  test_phase10_unit.py  test_phase12_integration.py  test_phase12_unit.py  test_phase13_integration.py  test_phase13_unit.py  test_phase14_integration.py  test_phase14_unit.py  test_phase15_integration.py  test_phase15_unit.py  test_phase1_integration.py  test_phase2_connectors.py  test_phase3_integration.py  test_phase3_unit.py  test_phase4_integration.py  test_phase4_unit.py  test_phase5_integration.py  test_phase5_unit.py  test_phase6_integration.py  test_phase6_unit.py  test_phase7_integration.py  test_phase7_unit.py  test_phase8_integration.py  test_phase8_unit.py  test_policy_engine.py  test_tenancy.py
apps/worker/: Dockerfile  pyproject.toml  requirements.audit.txt
apps/worker/omniflow_worker/: main.py
apps/worker/tests/: test_worker.py
(+158 files in other folders)
