[build-system]
requires = ["setuptools==75.2.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omniflow-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "celery==5.4.0",
  "redis==5.2.0",
  "pydantic==2.9.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3"
]

[tool.setuptools.packages.find]
include = ["omniflow_worker*"]
